# Ondas-2

./: .gitignore  README.md
Code/: CMakeLists.txt  animation.cpp  animation.h  function.cpp  function.h  graph.cpp  graph.h  icons.qrc  main.cpp  tview.cpp  tview.h  tview.ui
